--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <script src="index.js"></script>
+    <nav>
+      <ul>
+        <li>Header Logo</li>
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+      </ul>
+    </nav>
+    <div class="hero">
+      <div class="left">
+        <h3>This website is awesome</h3>
+        <p>lorem ispum lorem ispum lorem ispum lorem ispum lorem ispum lorem ispum</p>
+        <button>sign up</button>
+      </div>
+      <div class ="right">
+        <img>
+      </div>
+    </div>
+    <div class="main">
+      <h3>Some random information</h3>
+      <div class="cards">
+        <div class="card">
+          <img>
+          <p>lorem ispum lorem ispum lorem i</p>
+        </div>
+        <div class="card">
+          <img>
+          <p>lorem ispum lorem ispum lorem i</p>
+        </div>
+        <div class="card">
+          <img>
+          <p>lorem ispum lorem ispum lorem i</p>
+        </div>
+        <div class="card">
+          <img>
+          <p>lorem ispum lorem ispum lorem i</p>
+        </div>
+      </div>
+    </div>
+    <div class="quote">
+      This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice
+    </div>
+    <div class="call_to_action"></div>
+    <div class="footer"></div>
   </body>
 </html>
