Change index.html to add images inside cards

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       <h3>Some random information</h3>
       <div class="cards">
         <div class="card">
-          <img>
+          <img src="./images/robot1.jpg" alt="NPC robot">
           <p>lorem ispum lorem ispum lorem i</p>
         </div>
         <div class="card">
-          <img>
+          <img src="./images/robot2.jpg" alt="NPC robot">
           <p>lorem ispum lorem ispum lorem i</p>
         </div>
         <div class="card">
-          <img>
+          <img src="./images/robot3.jpg" alt="NPC robot">
           <p>lorem ispum lorem ispum lorem i</p>
         </div>
         <div class="card">
