--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
           <img src="./images/robot3.jpg" alt="NPC robot">
           <p>lorem ispum lorem ispum lorem i</p>
         </div>
-        <div class="card">
-          <img>
-          <p>lorem ispum lorem ispum lorem i</p>
-        </div>
-      </div>
+     </div>  <!--end cards div -->
     </div>
     <div class="quote">
       This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice
