--- a/index.html
+++ b/index.html
@@ -43,10 +43,21 @@
         </div>
      </div>  <!--end cards div -->
     </div>
-    <div class="quote">
+    <div class="container">
+      <div id="quote">
       This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice
+      </div>
+      <div id="author">-Thor, god of thunder</div>
     </div>
-    <div class="call_to_action"></div>
-    <div class="footer"></div>
+    <div class="container">
+      <div class="call_to_action">
+        <div class="persuade">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>sign up</button>
+      </div>
+    </div>
+    <div class="footer">Copyright &#169 The Skibidy Project 2024</div>
   </body>
 </html>
