Update file to add image to hero

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button>sign up</button>
       </div>
       <div class ="right">
-        <img>
+        <img src="./images/main.jpg" alt="a black gaming controller">
       </div>
     </div>
     <div class="main">
