Complete style of index
completed the basic style of index.html
in styles.css

--- a/index.html
+++ b/index.html
@@ -8,24 +8,29 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>Header Logo</li>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
-      </ul>
-    </nav>
-    <div class="hero">
-      <div class="left">
-        <h3>This website is awesome</h3>
-        <p>lorem ispum lorem ispum lorem ispum lorem ispum lorem ispum lorem ispum</p>
-        <button>sign up</button>
+    <div class="top">
+      <div class="nav">
+        <div class="logo">Header Logo</div>
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
       </div>
-      <div class ="right">
-        <img src="./images/main.jpg" alt="a black gaming controller">
+      <div class="hero">
+        <div class="left">
+          <h3 id="main-heading">This website is awesome</h3>
+          <p>
+            This website has some subtext that goes here under the
+            main title. It's  a smaller font and the color is lower contrast
+          </p>
+          <button id="first">sign up</button>
+        </div>
+        <div class ="right">
+          <img src="./images/main.jpg" alt="a black gaming controller">
+        </div>
       </div>
-    </div>
+    </div> <!-- end top div-->
     <div class="main">
       <h3>Some random information</h3>
       <div class="cards">
@@ -49,10 +54,10 @@
       </div>
       <div id="author">-Thor, god of thunder</div>
     </div>
-    <div class="container">
+    <div class="container-two">
       <div class="call_to_action">
         <div class="persuade">
-          <h3>Call to action! It's time!</h3>
+          <h1>Call to action! It's time!</h2>
           <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>sign up</button>
