Change text to make it orignal

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <body>
     <div class="top">
       <div class="nav">
-        <div class="logo">Header Logo</div>
+        <div class="logo">Brain Rotters</div>
         <ul>
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
+          <li>Winter Arc</li>
+          <li>Lock in</li>
+          <li>Contact</li>
         </ul>
       </div>
       <div class="hero">
         <div class="left">
-          <h3 id="main-heading">This website is awesome</h3>
+          <h3 id="main-heading">This website is Acoustic</h3>
           <p>
             This website has some subtext that goes here under the
             main title. It's  a smaller font and the color is lower contrast
@@ -36,15 +36,15 @@
       <div class="cards">
         <div class="card">
           <img src="./images/robot1.jpg" alt="NPC robot">
-          <p>lorem ispum lorem ispum lorem i</p>
+          <p>This is an NPC robot</p>
         </div>
         <div class="card">
           <img src="./images/robot2.jpg" alt="NPC robot">
-          <p>lorem ispum lorem ispum lorem i</p>
+          <p>This is another NPC robot</p>
         </div>
         <div class="card">
           <img src="./images/robot3.jpg" alt="NPC robot">
-          <p>lorem ispum lorem ispum lorem i</p>
+          <p>You won't believe me but..</p>
         </div>
      </div>  <!--end cards div -->
     </div>
